--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
@@ -21,6 +21,16 @@
     <div id="spinner-loading" class="spinner-border text-info mx-4" role="status" style="display:none;">
         <span class="sr-only">Loading...</span>
     </div>
+
+    <div class="col-md-4">
+        <button id="btn-validar" class="btn btn-outline-primary float-right">
+            Verificar Migración <i class="fa fa-refresh"></i>
+        </button>
+    </div>
+    <div id="spinner-loading2" class="spinner-border text-info mx-4" role="status" style="display:none;">
+        <span class="sr-only">Loading...</span>
+    </div>
+
 </div>
 
 <div class="table-responsive" style="min-height:300px; font-size: 13px;">
